@@ -1,6 +1,7 @@
 package com.dev.backend.security;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -22,18 +23,23 @@ public class CustomUserDetailsService implements UserDetailsService {
         @Override
         public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
                 User user = userService.findUserByEmail(email);
+
                 if (user == null) {
                         throw new UsernameNotFoundException("User not found");
                 }
-                List<GrantedAuthority> authorities = user.getRoles()
+
+                List<String> roles = user.getUserRoles()
                                 .stream()
-                                .map(role -> (GrantedAuthority) new SimpleGrantedAuthority(role.getName()))
-                                .collect(Collectors.toList());
+                                .map(ur -> ur.getRole().getName())
+                                .toList();
+
+                Set<GrantedAuthority> authorities = roles.stream()
+                                .map(role -> new SimpleGrantedAuthority(role))
+                                .collect(Collectors.toSet());
 
                 return new org.springframework.security.core.userdetails.User(
                                 user.getEmail(),
                                 user.getPassword(),
                                 authorities);
-
         }
 }
